--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.titulo{
+    text-align: center;
+}
+.banner-principal{
+    width: 100%;
+    
+}
