--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 *{
+    margin: 0;
+    padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-sizing: border-box;
 }
 
-.titulo{
-    text-align: center;
+.logo-do-site{
+    width: 10%;
 }
+.titulo{
+    display: inline;
+    margin-top: 1%;
+}
+
 .banner-principal{
     width: 100%;
     
