--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
-*{
-    margin: 0;
-    padding: 0;
+body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
+}
+
+.topo-do-site{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .logo-do-site{
-    width: 10%;
-}
-.titulo{
-    display: inline;
-    margin-top: 1%;
+    width: 100px;
+
 }
 
 .banner-principal{
     width: 100%;
-    
 }
