--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body{
     width: 100px;
 
 }
+.container-principal{
+    text-align: center;
+}
+.container-principal li{
+    list-style-type: none;
+}
 
 .banner-principal{
     width: 100%;
